# acts

./: CMakeLists.txt
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/Traccc/: CMakeLists.txt
Examples/Algorithms/Traccc/Common/include/ActsExamples/Traccc/Common/: Converter.hpp  Debug.hpp  LSH.hpp  MeasurementMapping.hpp  TracccChainAlgorithmBase.hpp  TracccChainConfig.hpp  TracccChainConversion.hpp
Examples/Algorithms/Traccc/Common/include/ActsExamples/Traccc/Common/Measurement/: Debug.hpp  MeasurementMatch.hpp
Examples/Algorithms/Traccc/Common/include/ActsExamples/Traccc/Common/Util/: IndexMap.hpp
Examples/Algorithms/Traccc/Common/src/: TracccChainAlgorithmBase.cpp
Examples/Algorithms/Traccc/Cuda/include/ActsExamples/Traccc/Cuda/: Types.hpp
Examples/Algorithms/Traccc/Cuda/src/: TracccChainAlgorithm.cpp
Examples/Algorithms/Traccc/Host/include/ActsExamples/Traccc/Host/: Types.hpp
Examples/Algorithms/Traccc/Host/src/: TracccChainAlgorithm.cpp
Examples/Algorithms/Traccc/include/ActsExamples/Traccc/: Chain.hpp  Converter.hpp  ExampleChains.hpp  StandardChain.hpp  TracccAlgorithm.hpp  TracccChainAlgorithm.hpp  Utils.hpp
Examples/Algorithms/Traccc/src/: TracccAlgorithm.cpp  TracccChainAlgorithm.cpp  TracccChainAlgorithmHost.cpp
Plugins/: CMakeLists.txt
Plugins/Traccc/: CMakeLists.txt
Plugins/Traccc/include/Acts/Plugins/Traccc/: AlgebraConversion.hpp  BarcodeMap.hpp  CellConversion.hpp  Chain.hpp  MeasurementConversion.hpp  TracccConversion.hpp  TracccConverter.hpp  TrackConversion.hpp  Utils.hpp
Plugins/Traccc/include/Acts/Plugins/Traccc/Detail/: Module.hpp
Plugins/Traccc/src/: TracccConversion.cpp  TracccConverter.cpp
cmake/: ActsExternSources.cmake
(+30 files in other folders)
